...
  <string name="app_name">DemoKiller</string>
  <string name="title_activity_login">Sign in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
...
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="title_activity_demo_data_binding">DemoDataBindingActivity</string>

  <string name="create_user">Create user</string>
  <string name="log_in">Log in</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="sort_demo">Sort Demo</string>
  <string name="open_location_setting">Open Location Setting</string>
...
